Updated arrow position to avoid overflowing.

--- a/css/general.css
+++ b/css/general.css
@@ -1,7 +1,7 @@
 @keyframes pohybHoreDole {
-    0%   { top: 55%; }
-    50%  { top: 60%; }
-    100% { top: 55%; }
+    0%   { top: 40%; }
+    50%  { top: 45%; }
+    100% { top: 40%; }
     }
 
 body {
